フォームリクエスト

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1090,6 +1090,10 @@ select {
 .fill-current {
   fill: currentColor;
 }
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
 .p-2 {
   padding: 0.5rem;
 }
