--- a/public/css/app.css
+++ b/public/css/app.css
@@ -836,8 +836,14 @@ select {
 .w-28 {
   width: 7rem;
 }
+.w-32 {
+  width: 8rem;
+}
 .w-4 {
   width: 1rem;
+}
+.w-40 {
+  width: 10rem;
 }
 .w-48 {
   width: 12rem;
@@ -1089,10 +1095,6 @@ select {
 }
 .fill-current {
   fill: currentColor;
-}
-.object-center {
-  -o-object-position: center;
-     object-position: center;
 }
 .p-2 {
   padding: 0.5rem;
