--- a/public/css/app.css
+++ b/public/css/app.css
@@ -918,6 +918,9 @@ select {
 .flex-col {
   flex-direction: column;
 }
+.flex-wrap {
+  flex-wrap: wrap;
+}
 .items-center {
   align-items: center;
 }
