--- a/public/css/app.css
+++ b/public/css/app.css
@@ -815,6 +815,9 @@ select{
 .mr-2{
   margin-right: 0.5rem;
 }
+.mr-3{
+  margin-right: 0.75rem;
+}
 .mt-1{
   margin-top: 0.25rem;
 }
@@ -981,6 +984,11 @@ select{
 .list-disc{
   list-style-type: disc;
 }
+.appearance-none{
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -989,6 +997,9 @@ select{
 }
 .flex-wrap{
   flex-wrap: wrap;
+}
+.items-end{
+  align-items: flex-end;
 }
 .items-center{
   align-items: center;
@@ -1242,6 +1253,9 @@ select{
 .pl-3{
   padding-left: 0.75rem;
 }
+.pr-10{
+  padding-right: 2.5rem;
+}
 .pr-4{
   padding-right: 1rem;
 }
@@ -1337,6 +1351,9 @@ select{
 }
 .leading-normal{
   line-height: 1.5;
+}
+.leading-relaxed{
+  line-height: 1.625;
 }
 .leading-tight{
   line-height: 1.25;
@@ -1760,6 +1777,9 @@ select{
   }
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .md\:justify-around{
+    justify-content: space-around;
   }
   .md\:border-l{
     border-left-width: 1px;
