--- a/public/css/app.css
+++ b/public/css/app.css
@@ -780,6 +780,10 @@ select{
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 .-ml-px{
   margin-left: -1px;
 }
@@ -884,6 +888,9 @@ select{
 }
 .h-8{
   height: 2rem;
+}
+.h-40{
+  height: 10rem;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -1042,6 +1049,9 @@ select{
 .rounded-md{
   border-radius: 0.375rem;
 }
+.rounded-full{
+  border-radius: 9999px;
+}
 .rounded-l-md{
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1160,6 +1170,10 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-gray-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
 }
@@ -1180,6 +1194,10 @@ select{
 }
 .fill-current{
   fill: currentColor;
+}
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .p-2{
   padding: 0.5rem;
@@ -1545,6 +1563,10 @@ select{
 .hover\:bg-red-500:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.hover\:bg-gray-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-400:hover{
   --tw-text-opacity: 1;
